--- a/www/css/style.css
+++ b/www/css/style.css
@@ -229,7 +229,7 @@ html body {
 	background-position: left center;
 	background-repeat: no-repeat;
 }
-#haloText, #hasil {
+#haloText, #namaText {
 	font-family: 'Segoe UI bold';
 }
 #umurText {
@@ -736,10 +736,6 @@ html body {
       -ms-transition: all 0.4s;
       -o-transition: all 0.4s;
 }
-#jenisTerapiDasar table tr td:active {
-	background-color: yellow;
-    color: #000000;
-}
 #tabel td {
     color: #2F4F4F;    
     font-weight:normal;
@@ -772,3 +768,64 @@ html body {
 	font-family: 'Segoe UI light';
 }
 /*LIST TERAPI DASAR END*/
+
+/* TERAPI DASAR START */
+.huruf h1{
+    font-size:500px;
+    font-weight:normal;
+    margin:0px;
+    overflow:visible;
+    padding:0px;
+    text-align:center;
+}
+.foot{
+    background-color: black;
+    text-align: center;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+.foot button {
+    -moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
+    box-shadow:inset 0px 1px 0px 0px #f5978e;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f));
+    background:-moz-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+    background:-webkit-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+    background:-o-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+    background:-ms-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+    background:linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f',GradientType=0);
+    background-color:#f24537;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #d02718;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #810e05;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+.foot button:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
+    background:-moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+    background:-webkit-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+    background:-o-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+    background:-ms-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+    background:linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24537',GradientType=0);
+    background-color:#c62d1f;
+}
+.foot button:active {
+    position:relative;
+    top:1px;
+}
+
+/* TERAPI DASAR END */
