--- a/www/css/style.css
+++ b/www/css/style.css
@@ -342,7 +342,7 @@ html body {
 	width: 80%;
 	height: 0;
 	padding-bottom: 80%;
-	padding-top: 80%;
+	padding-top: 0;
 }
 .imageTerapiTerstruktur {
 	/*border: 1px solid blue;*/
