--- a/www/css/level.css
+++ b/www/css/level.css
@@ -225,14 +225,26 @@ CSS UNTUK HALAMAN REWARD********************************************************
 ********************************************************************************************************************/
 
 .back-db2{
-   width: 75%;
+  width: 75%;
   float: right;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
   height: 99%;
   margin: 0 auto;
-  border-top: none;
   text-align: center;
+}
+
+.back-db2 .figured {
+  margin-bottom: -3%;
+}
+
+.figured figure {
+  display: inline-block;
+}
+
+.figured figcaption{
+  font-family: "Segoe UI light";
+
+  margin: 1% 0 0 0;
+  color: #ffffff;
 }
 
 .back-db2 img {
@@ -241,66 +253,65 @@ CSS UNTUK HALAMAN REWARD********************************************************
   margin-left: 1%;
 }
 
-.benar-salah{
-  width: 100%;
-  background-color: #45dab9;
-  margin-top: 3%;
+  .back-db2 img:hover, #benarsalah:hover, #benarsalah2:hover {
+  background-color: #cccccc;  
 }
 
-.benar-salah img {
+#benarsalah, #benarsalah2, #carireset, #carireset2 {
+  vertical-align: middle;
+  width: 100%;
+  background-color: #00cab9;
+  margin-top: 1%;
+  color: #000;
+}
+
+#carireset,#carireset2 {
+  margin-top: 0%;
+  opacity: 0.7;
+}
+
+#carireset img, #carireset2 img, #benarsalah img, #benarsalah2 img {
   vertical-align: middle;
   padding: 1%;
-  max-width: 3%;
+  max-width: 2.5%;
 }
 
-.benar-salah p {
+#carireset h6,#carireset2 h6, #benarsalah h6, #benarsalah2 h6 {
   vertical-align: middle;
   display: inline;
-  font-size: 20pt;
+  font-family: 'Segoe UI light';
+  margin-left: -3%;
 }
 
-.menu-option {
-  margin-top: 20%;
+#menu-option, #menu-option2 {
+
 }
 
-figure {
-  display: inline-block;
-}
-
-figcaption {
-  margin: 1% 0 0 0;
-  color: #ffffff;
-}
-
-
-/********************************************************************************************************************
-CSS UNTUK HALAMAN IMITASI********************************************************************************************
-********************************************************************************************************************/
-.wrap {
-  min-height: 100%;
-  position: relative;
-}
-
-.quest{
-  background:#ffab62;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-}
-
-.quest p {
+#vidbenar, #vidsalah {
   text-align: center;
-  display: inline;
-  float: left;
-  margin-left: 40%;
-  margin-right: 30%;
+  width: 100%;
+  height: 100%;
 }
-.quest button {
-  float: left;
-  display: inline;
-  margin-top: 1%;
-  margin-left: 1%;
+
+#menu-option3,#menu-option4 {
+  margin-top: 10%;
+}
+
+#menu-option p, #menu-option2 p, #menu-option3 p, #menu-option4 p {
+  font-family: "Segoe UI light";
+  margin-bottom: -1%;
+}
+
+select {
+  background: transparent;
+  width: 27%;
+  padding: 0%;
+  font-size: 16px;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: #eee;
 }
 
 
