--- a/www/css/level.css
+++ b/www/css/level.css
@@ -202,7 +202,7 @@ button#edit {
 }
 
 .back-db {
-  background-image: url('../img/db.jpg');
+  background-image: url('../img/Pengaturan/db.jpg');
   width: 75%;
   float: right;
   background-repeat: no-repeat;
